--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ djangorestframework 3.16.1
 dotenv==0.9.9
 psycopg2-binary==2.9.10
 django-cors-headers==4.7.0
+cryptography==43.0.0
+pyjwt==2.10.1
+bcrypt==4.3.0
